Исправлена реализация курсовой работы №2